--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "dependencies": {
     "create-react-app": "^3.4.1",
     "mediasoup": "3",
     "ngrok": "^3.2.7",
+    "nodemon": "^2.0.2",
     "peer": "^0.5.1",
     "peerjs": "^1.2.0"
   }
